<resources>
    <string name="app_name">大步邁進玩遊戲導覽版</string>
    <string name="error">Error</string>
    <string name="welcome">~ 歡 迎 來 到 大 進 休 閒 農 業 區 ~</string>
    <string name="rule">玩法說明</string>
    <string name="start1">開始挑戰</string>
    <string name="GPS">已抵達，重整GPS</string>
    <string name="mainDis">請參考地圖，到達指定地點後會跳出任務。挑戰成功即可收集到通關字，集滿字數就能換到相對應的折價券。</string>
    <string name="scarch">尚未抵達任何地點</string>
    <string name="scarchDis">正在尋找位置</string>
    <string name="stage1">大鼻子的自由創作</string>
    <string name="stage1Dis">大鼻子的自由創作提供各種木頭材質及各種機具讓小朋友發揮自己的創意製作任何作品，是一個兼具親子互動、學習木工創作與環保的好地方。</string>
    <string name="stage0_question">請先進入服務中心，看看有什麼體驗?</string>
    <string name="stage0_ans1">陶藝</string>
    <string name="stage0_ans2">鐵花窗</string>
    <string name="stage0_ans3">木工</string>
    <string name="ans_error">喔不!你答錯了</string>
    <string name="button_yes">確認</string>
    <string name="ans_right">恭喜，你答對了</string>
    <string name="stage_dis">你已經玩過了喔</string>
    <string name="stage2_dis">請問你們今天\n總消費金額是多少？\n(請按計算機輸入金額)</string>
    <string name="stage1_dis">請填入金額</string>
    <string name="stage2_title">你對蜜蜂有多瞭解？\n擲骰子走到橘色蜂巢裡，回答問題幫蜜蜂釀造蜂蜜！</string>
    <string name="stage2_score">0/3</string>
    <string name="stage2_ans1">正確</string>
    <string name="stage2_ans2">錯誤</string>
    <string name="stage3_title">請進到幸福20號內看看有哪些動物，\n幫忙把園區內的動物們送回家。</string>
    <string name="stage4_title">進安宮原供奉的主神是？</string>
    <string name="stage4_ans4">土地公</string>
    <string name="stage4_ans3">水官</string>
    <string name="stage4_ans2">地官</string>
    <string name="stage4_ans1">天官</string>
    <string name="stage6_title">不同的季節來到松茂果園可以採摘不一樣的水果，\n 請幫忙把下列水果移動到適合的產季吧！</string>
    <string name="stage7_title">請問吊橋上的圖騰，\n是原住民哪一族的圖騰?</string>
    <string name="stage7_ans4">排灣族</string>
    <string name="stage7_ans3">布農族</string>
    <string name="stage7_ans2">阿美族</string>
    <string name="stage7_ans1">泰雅族</string>
    <string name="stage8_title">請問春記、劉記、順進三家各賣什麼產品？\n（全對才過關）</string>
    <string name="stage8_hint">請輸入</string>
    <string name="stage_button">確定</string>
    <string name="stage9_titile">擲出「聖筊」(一平一凸)，就能過關!</string>
    <string name="stageb_title">累計獎勵(請回遊客中心兌煥)</string>
    <string name="stageb_c1">大進伴手禮折價券×1</string>
    <string name="stageb_c1dis">收集滿4個字</string>
    <string name="stageb_c2">大鼻子手作折價券×1\n神隱村DIY折價券×1</string>
    <string name="stageb_c2dis">收集滿9個字</string>
    <string name="back">返回</string>
    <string name="back_dis">你確定要回到主頁面嗎?\n回去視同放棄關卡喔!</string>
    <string name="GPS_wrong">尚未收尋到GPS</string>
    <string name="Press">請按我</string>
</resources>