<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stage7"
    android:background="@drawable/background4">

    <Button
        android:id="@+id/button_ans1"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:text="@string/stage7_ans1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ans3"
        app:layout_constraintEnd_toStartOf="@+id/button_ans2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_question" />

    <Button
        android:id="@+id/button_ans2"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="@string/stage7_ans2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_ans1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_ans1"
        app:layout_constraintTop_toTopOf="@+id/button_ans1" />

    <Button
        android:id="@+id/button_ans3"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:text="@string/stage7_ans3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_ans1"
        app:layout_constraintStart_toStartOf="@+id/button_ans1"
        app:layout_constraintTop_toBottomOf="@+id/button_ans1" />

    <Button
        android:id="@+id/button_ans4"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:text="@string/stage7_ans4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_ans3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_ans3"
        app:layout_constraintTop_toTopOf="@+id/button_ans3" />

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/stage7_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/map"
        android:contentDescription="@string/error" />
</androidx.constraintlayout.widget.ConstraintLayout>