<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stage0">

    <Button
        android:id="@+id/button_ans1"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="@string/stage0_ans1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ans2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_question" />

    <Button
        android:id="@+id/button_ans2"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="@string/stage0_ans2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_ans1"
        app:layout_constraintEnd_toStartOf="@+id/button_ans3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_ans1"
        app:layout_constraintTop_toTopOf="@+id/button_ans1" />

    <Button
        android:id="@+id/button_ans3"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="@string/stage0_ans3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_ans2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_ans2"
        app:layout_constraintTop_toTopOf="@+id/button_ans2" />

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/stage0_question"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>